--- a/src/components/printingPage/reciept-styling.css
+++ b/src/components/printingPage/reciept-styling.css
@@ -32,7 +32,7 @@ body {
         justify-content: center;
         font-size: 14px;
         margin: auto;
-        height: 70vh;
+        /* height: 80vh; */
 }
 
 .bold {
@@ -52,7 +52,7 @@ body {
 .invoice_wrapper {
     border: 3px solid var(--primary);
     width: 100%;;
-    /* max-width: 100%; */
+    height: 100%;
 }
 
 .invoice_wrapper .header .logo_invoice_wrap,
