--- a/src/components/printingPage/reciept-styling.css
+++ b/src/components/printingPage/reciept-styling.css
@@ -12,7 +12,6 @@
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
 }
-
 body {
     background: var(--secondary);
     padding: 50px;
@@ -23,20 +22,22 @@ body {
     font-size: 14px;
 } */
 
-.main-reciept-container{
+.main-reciept-container {
     /* background: var(--secondary); */
-        padding: 50px;
-        color: var(--secondary);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 14px;
-        margin: auto;
-        /* height: 80vh; */
+    padding: 50px;
+    color: var(--primary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+   
 }
 
 .bold {
     font-weight: 900;
+}
+.semi-bold{
+    font-weight: 400;
 }
 
 .light {
@@ -46,30 +47,30 @@ body {
 .wrapper {
     background: var(--white);
     padding: 30px;
-    
+    /* width: 70%; */
 }
 
 .invoice_wrapper {
     border: 3px solid var(--primary);
-    width: 100%;;
-    height: 100%;
+    width: 300px;
+    /* max-width: 100%; */
 }
 
 .invoice_wrapper .header .logo_invoice_wrap,
 .invoice_wrapper .header .bill_total_wrap {
     display: flex;
     justify-content: space-between;
-    padding: 30px;
+    padding: 10px;
+    flex-direction: column;
 }
 
 .invoice_wrapper .header .logo_sec {
-    display: flex;
-    align-items: center;
+    text-align: center;
 }
 
-.invoice_wrapper .header .logo_sec .title_wrap {
-    margin-left: 5px;
-}
+/* .invoice_wrapper .header .logo_sec .title_wrap {
+    margin-left: -20px;
+} */
 
 .invoice_wrapper .header .logo_sec .title_wrap .title {
     text-transform: uppercase;
@@ -78,40 +79,41 @@ body {
 }
 
 .invoice_wrapper .header .logo_sec .title_wrap .sub_title {
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .invoice_wrapper .header .invoice_sec,
 .invoice_wrapper .header .bill_total_wrap .total_wrap {
     text-align: right;
 }
-.invoice_wrapper .header .invoice_sec{
+.invoice_sec{
+ 
+    text-align: center;
     margin-top: 25px;
-    padding-top: 20px;
-}
 
+}
 .invoice_wrapper .header .invoice_sec .invoice {
-    font-size: 28px;
+    font-size: 18px;
     color: var(--primary);
+    text-align: center;
+    align-items: center;
 }
 
 .invoice_wrapper .header .invoice_sec .invoice_no,
 .invoice_wrapper .header .invoice_sec .date {
     display: flex;
     width: 100%;
-    
-  
 }
 
 .invoice_wrapper .header .invoice_sec .invoice_no span:first-child,
 .invoice_wrapper .header .invoice_sec .date span:first-child {
-    width: 70px;
+    /* width: 50px; */
     text-align: left;
 }
 
 .invoice_wrapper .header .invoice_sec .invoice_no span:last-child,
 .invoice_wrapper .header .invoice_sec .date span:last-child {
-    width: calc(100% - 70px);
+    width: calc(100% - 50px);
 }
 
 .invoice_wrapper .header .bill_total_wrap .total_wrap .price,
@@ -122,21 +124,23 @@ body {
 
 .invoice_wrapper .body .main_table .table_header {
     background: var(--primary);
+    width: 100%;
 }
 
 .invoice_wrapper .body .main_table .table_header .row {
     color: var(--white);
-    font-size: 18px;
+    font-size: 13px;
     border-bottom: 0px;
 }
 
 .invoice_wrapper .body .main_table .row {
     display: flex;
-    border-bottom: 1px solid var(--secondary);
+    border-bottom: 1px solid var(--primary);
+    
 }
 
 .invoice_wrapper .body .main_table .row .col {
-    padding: 10px;
+    padding: 5px;
 }
 
 .invoice_wrapper .body .main_table .row .col_no {
@@ -144,11 +148,11 @@ body {
 }
 
 .invoice_wrapper .body .main_table .row .col_des {
-    width: 45%;
+    width: 40%;
 }
 
 .invoice_wrapper .body .main_table .row .col_price {
-    width: 15%;
+    width: 20%;
     text-align: center;
 }
 
@@ -165,16 +169,16 @@ body {
 .invoice_wrapper .body .paymethod_grandtotal_wrap {
     display: flex;
     justify-content: space-between;
-    padding: 5px 10px 30px 0;
+    padding: 30px 0px 30px 0;
     align-items: flex-end;
 }
 
 .invoice_wrapper .body .paymethod_grandtotal_wrap .paymethod_sec {
-    padding-left: 30px;
+    padding-left: 10px;
 }
 
 .invoice_wrapper .body .paymethod_grandtotal_wrap .grandtotal_sec {
-    width: 30%;
+    width: 50%;
 }
 
 .invoice_wrapper .body .paymethod_grandtotal_wrap .grandtotal_sec p {
@@ -215,4 +219,8 @@ body {
 
 .invoice_wrapper .footer .terms .tc {
     font-size: 16px;
+}
+.powered-by{
+    text-align: center;
+    margin-top: 18px;
 }
