new receipt fixes

--- a/src/components/printingPage/reciept-styling.css
+++ b/src/components/printingPage/reciept-styling.css
@@ -89,7 +89,7 @@ body {
 .invoice_sec{
  
     text-align: center;
-    margin-top: 25px;
+    margin-top: 17px;
 
 }
 .invoice_wrapper .header .invoice_sec .invoice {
@@ -123,13 +123,15 @@ body {
 }
 
 .invoice_wrapper .body .main_table .table_header {
-    background: var(--primary);
+    /* background: var(--primary); */
+    /* color: var(--primary); */
     width: 100%;
 }
 
 .invoice_wrapper .body .main_table .table_header .row {
-    color: var(--white);
+    color: var(--primary);
     font-size: 13px;
+    font-weight: bold;
     border-bottom: 0px;
 }
 
@@ -201,20 +203,20 @@ body {
 }
 
 .invoice_wrapper .body .paymethod_grandtotal_wrap .grandtotal_sec p:last-child span {
-    background: var(--primary);
+    /* background: var(--primary); */
     padding: 5px;
-    color: #fff;
+    color: var(--primary);
 }
 
 .invoice_wrapper .footer {
-    padding: 30px;
+    padding: 0px 20px 10px 30px ;
 }
 
 .invoice_wrapper .footer>p {
     color: var(--primary);
     text-decoration: underline;
     font-size: 18px;
-    padding-bottom: 5px;
+    padding-bottom: 0px;
 }
 
 .invoice_wrapper .footer .terms .tc {
@@ -222,5 +224,5 @@ body {
 }
 .powered-by{
     text-align: center;
-    margin-top: 18px;
+    margin-top: 10px;
 }
