--- a/src/components/printingPage/new-receipt-styles.css
+++ b/src/components/printingPage/new-receipt-styles.css
@@ -47,12 +47,12 @@ body {
 
 .wrapper {
     background: var(--white);
-    padding: 30px;
+    padding: 10px;
     /* width: 70%; */
 }
 
 .invoice_wrapper {
-    border: 3px solid var(--primary);
+    /* border: 3px solid var(--primary); */
     width: 300px;
     /* max-width: 100%; */
 }
@@ -213,6 +213,7 @@ body {
 
 .invoice_wrapper .footer {
     padding: 0px 20px 10px 30px;
+    margin-top: -20px;
 }
 
 .invoice_wrapper .footer>p {
